base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.bunnyshell.com/is-docker-compose: bns
    app.kubernetes.io/managed-by: Bunnyshell
  name: lns2fw-ingress
spec:
  ingressClassName: bns-nginx
  rules:
  - host: api-n5sv5x.bunnyenv.com
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 80
        path: /
        pathType: Prefix
